--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
-<<<<<<< HEAD
   "name": "mobile-stats",
-=======
-  "name": "vehicle-search",
->>>>>>> 6d4ee512e8efc4bee26fd7fbe44cb1d03b98ecac
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
